--- a/package.json
+++ b/package.json
@@ -4,34 +4,59 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
+    "start2": "ng serve",
+    "start": "node server",
+    "build": "ng build --env=prod",
+    "build-dev": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^5.1.2",
+    "@angular/common": "^5.1.2",
+    "@angular/compiler": "^5.1.2",
+    "@angular/cdk": "^5.0.2",
+    "@angular/core": "^5.1.2",
+    "@angular/forms": "^5.1.2",
+    "@angular/http": "^5.1.2",
+    "@angular/material": "^5.0.2",
+    "@angular/platform-browser": "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@angular/router": "^5.1.2",
+    "@ncstate/sat-popover": "^1.0.0-beta.4",
+    "axios": "^0.16.2",
+    "@types/es6-shim": "0.0.30",
+    "@types/express": "4.0.31",
+    "@types/node": "4.0.30",
+    "@types/ws": "0.0.29",
+    "aws-sdk": "^2.27.0",
+    "babel-core": "^6.11.4",
+    "body-parser": "^1.18.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "csv": "^1.1.0",
+    "d3": "^4.11.0",
+    "express": "^4.16.1",
+    "hammerjs": "^2.0.8",
+    "material-design-lite": "^1.3.0",
+    "mongoose": "^4.12.0",
     "rxjs": "^5.5.6",
+    "ts-helpers": "^1.1.1",
+    "typescript": "^2.5.3",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.4",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
+    "@types/es6-shim": "0.0.30",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/ws": "0.0.29",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
