Attempted fix for responsive

--- a/package.json
+++ b/package.json
@@ -14,61 +14,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/cdk": "^5.0.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/router": "^5.1.2",
+    "@angular/animations": "^5.2.2",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/forms": "^5.2.2",
+    "@angular/http": "^5.2.2",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/router": "^5.2.2",
     "@ncstate/sat-popover": "^1.0.0-beta.4",
-    "axios": "^0.16.2",
-    "@types/es6-shim": "0.0.30",
-    "@types/express": "4.0.31",
-    "@types/node": "4.0.30",
-    "@types/ws": "0.0.29",
-    "aws-sdk": "^2.27.0",
-    "babel-core": "^6.11.4",
+    "@types/compression": "^0.0.35",
+    "@types/es6-shim": "^0.31.35",
+    "@types/express": "^4.11.0",
+    "@types/node": "^9.4.0",
+    "@types/ws": "^4.0.0",
+    "aws-sdk": "^2.188.0",
+    "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
     "body-parser": "^1.18.2",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.4.1",
-    "csv": "^1.1.0",
-    "d3": "^4.11.0",
-    "express": "^4.16.1",
+    "core-js": "^2.5.3",
+    "csv": "^2.0.0",
+    "d3": "^4.12.2",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "material-design-lite": "^1.3.0",
-    "mongoose": "^4.12.0",
+    "mongoose": "^4.13.10",
     "rxjs": "^5.5.6",
-    "ts-helpers": "^1.1.1",
-    "typescript": "^2.5.3",
+    "ts-helpers": "^1.1.2",
+    "systemjs": "^0.20.19",
+    "typescript": "^2.6.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
-    "@types/es6-shim": "0.0.30",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "@types/ws": "0.0.29",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "@angular/cli": "^1.6.6",
+    "@angular/compiler-cli": "^5.2.2",
+    "@angular/language-service": "^5.2.2",
+    "@types/es6-shim": "^0.31.35",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^9.4.0",
+    "@types/ws": "^4.0.0",
+    "codelyzer": "^4.1.0",
+    "jasmine-core": "^2.9.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "protractor": "^5.3.0",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.6.2"
   }
 }
